# docs/swagger.json
@@ -12,6 +12,11 @@
     "paths": {
         "/v1/auth/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "get string by ID",
                 "consumes": [
                     "application/json"
@@ -36,7 +41,7 @@
                     "200": {
                         "description": "OK. On success.",
                         "schema": {
-                            "$ref": "#/definitions/res.SwaggerSuccessRes-httpctrl_GetUserResponse"
+                            "$ref": "#/definitions/res.SwaggerSuccessRes-authctrl_GetUserResponse"
                         }
                     },
                     "400": {
@@ -62,7 +67,7 @@
         }
     },
     "definitions": {
-        "httpctrl.GetUserResponse": {
+        "authctrl.GetUserResponse": {
             "type": "object",
             "properties": {
                 "age": {
@@ -86,11 +91,11 @@
                 }
             }
         },
-        "res.SwaggerSuccessRes-httpctrl_GetUserResponse": {
+        "res.SwaggerSuccessRes-authctrl_GetUserResponse": {
             "type": "object",
             "properties": {
                 "D": {
-                    "$ref": "#/definitions/httpctrl.GetUserResponse"
+                    "$ref": "#/definitions/authctrl.GetUserResponse"
                 },
                 "M": {
                     "type": "string",
@@ -142,6 +147,13 @@
                     "example": "Age"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
