# internal/server/http/controller/auth/auth_req.go
@@ -1,4 +1,4 @@
-package httpctrl
+package authctrl
 
 type GetUserRequest struct {
 	ID int `query:"ID" validate:"required,numeric,min=10,max=20"`
