# internal/server/http/controller/auth/auth_res.go
@@ -1,0 +1,6 @@
+package authctrl
+
+type GetUserResponse struct {
+	Name string
+	Age  int
+}
