# internal/server/http/controller/auth/res/test_res_dto.go
@@ -1,6 +1,0 @@
-package httpctrl
-
-type GetUserResponse struct {
-	Name string `json:"name"`
-	Age  int    `json:"age"`
-}
